# DIO

Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/order-service/: CMakeLists.txt  main.cc
Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/order-service/models/: Order.h
Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/product-service/: CMakeLists.txt  config.json  main.cc
Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/product-service/models/: Product.h
Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/product-service/tests/: product_test.cc
Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/user-service/: CMakeLists.txt  main.cc
Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/user-service/models/: User.h
Bootcamps/Accenture - Desenvolvimento Java & Cloud/Docker: Utilização Prática no Cenário de Microsserviços/backend/services/user-service/tests/: user_test.cc
Bootcamps/BairesDev - Machine Learning Training/: .gitignore
Bootcamps/Cognizant - Mobile Developer/: shell.nix
Bootcamps/Klabin/: aria_log.00000001  aria_log_control
Bootcamps/Riachuelo - Primeiros Passos com Java/: README.md
Bootcamps/Savegnago - Lógica de Programação/: classificador_de_nivel_de_heroi.js  shell.nix
Bootcamps/TQI - Modernização com GenAI/: README.md
Bootcamps/meutudo - Mobile Developer/: .gitignore  flake.nix  shell.nix
Formação/BlockChain/btcwallet/: package.json
Formações/C e C++/: shell.nix
Formações/Javascript/: PROJETOS_ANALISE.md
Formações/NodeJS/: shell.nix
Formações/Ruby/: .gitignore  shell.nix
(+3019 files in other folders)
